@@ -131,7 +131,7 @@ static int set_list(CSetting *I,PyObject *list)
            which are inherently system-dependent */
       case cSetting_stereo_double_pump_mono: 
       case cSetting_max_threads:
-      case cSetting_migrate_sessions:
+      case cSetting_session_migration:
         break;
       default:
         if(ok) switch(setting_type) {
@@ -2195,7 +2195,7 @@ void SettingInitGlobal(int alloc,int reset_gui)
   SettingSet_s(I,cSetting_button_mode_name,"");
   SettingSet_i(I,cSetting_surface_type,0);
   SettingSet_b(I,cSetting_dot_normals,1);
-  SettingSet_b(I,cSetting_migrate_sessions,1);
+  SettingSet_b(I,cSetting_session_migration,1);
 }
 
 
