@@ -4,6 +4,8 @@ CHANGE LOG
 
 Changes up to 0.95
 
+   * session_migration setting
+
    * fixed problem with view matrix exploding on some proteins -- now
      allow front clipping plane to go negative with suitable protections.
 
